[gd_scene load_steps=7 format=2]

[ext_resource path="res://enemy/Enemy1.gd" type="Script" id=1]
[ext_resource path="res://enemy/enemy1.png" type="Texture" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.784314, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = SubResource( 2 )
region_rect = Rect2( 0, 0, 2048, 1 )

[sub_resource type="Animation" id=4]
resource_name = "rotate"

[node name="Enemy" type="Area2D" groups=["enemy"]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 3.14159
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 8, 0, 51, -3, 50, 5, 8, 20, 0, 48, -8, 20, -50, 5, -51, -3, -8, 0, -3, -33, -16, -42, 15, -42, 3, -33 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1, -1 )
scale = Vector2( 5.25, 4.75 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -32.0
margin_top = -62.0
margin_right = 32.0
margin_bottom = -48.0
custom_styles/fg = SubResource( 3 )
max_value = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/rotate = SubResource( 4 )

[node name="Aiming" type="Node2D" parent="."]
rotation = -6.00219

[node name="Position2D" type="Position2D" parent="Aiming"]
position = Vector2( 16.0843, 55.7252 )
rotation = -0.00698132

[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
